WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204866
Fix a broken assertion in GetByStatus::computeForStubInfoWithoutExitSiteFeedback().
https://bugs.webkit.org/show_bug.cgi?id=204866
Summary
Fix a broken assertion in GetByStatus::computeForStubInfoWithoutExitSiteFeedb...
Mark Lam
Reported
2019-12-04 17:19:18 PST
The assertion wrong assumes that access.offset() cannot be invalid unless the access.type() is a Miss. However, if the AccessCase is a Custom value or accessor, the offset is always invalid. We'll fix the assertion.
Attachments
proposed patch.
(2.88 KB, patch)
2019-12-04 17:25 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-12-04 17:25:01 PST
Created
attachment 384868
[details]
proposed patch.
Saam Barati
Comment 2
2019-12-04 17:28:29 PST
Comment on
attachment 384868
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=384868&action=review
> Source/JavaScriptCore/bytecode/GetByStatus.cpp:295 > + ASSERT(access.isCustom() || ((AccessCase::Miss == access.type()) == (access.offset() == invalidOffset)));
you could also do: ASSERT(((AccessCase::Miss == access.type() || access.isCustom()) == (access.offset() == invalidOffset)));
Mark Lam
Comment 3
2019-12-04 17:38:06 PST
(In reply to Saam Barati from
comment #2
)
> you could also do: > ASSERT(((AccessCase::Miss == access.type() || access.isCustom()) == > (access.offset() == invalidOffset)));
Thanks for the review. I've applied this change. Landed in
r253136
: <
http://trac.webkit.org/r253136
>.
Radar WebKit Bug Importer
Comment 4
2019-12-04 17:39:22 PST
<
rdar://problem/57648868
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug