Fix a broken assertion in GetByStatus::computeForStubInfoWithoutExitSiteFeedback(). https://bugs.webkit.org/show_bug.cgi?id=204866

Reviewed by Saam Barati.

The assertion wrong assumes that access.offset() cannot be invalid unless the
access.type() is a Miss.  However, if the AccessCase is a Custom value or accessor,
the offset is always invalid.  This patch fixes this assertion.

* bytecode/AccessCase.h:
(JSC::AccessCase::isCustom const):
* bytecode/GetByStatus.cpp:
(JSC::GetByStatus::computeForStubInfoWithoutExitSiteFeedback):



Canonical link: https://commits.webkit.org/218092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253136 268f45cc-cd09-0410-ab3c-d52691b4dbfc